--- a/index.html
+++ b/index.html
@@ -113,8 +113,13 @@
                     </tr>
                     <tr>
                       <th scope="row">Python</th>
-                      <td>1年</td>
-                      <td><span class="rating"><p class="rate rate2"></p></span></td>
+                      <td>3ヶ月</td>
+                      <td><span class="rating"><p class="rate rate1"></p></span></td>
+                    </tr>
+                    <tr>
+                      <th scope="row">PHP</th>
+                      <td>3ヶ月</td>
+                      <td><span class="rating"><p class="rate rate1"></p></span></td>
                     </tr>
                   </tbody>
                 </table>
@@ -148,6 +153,11 @@
                       <th scope="row">Xamarin</th>
                       <td>6ヶ月</td>
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Cake PHP</th>
+                      <td>3ヶ月</td>
+                      <td><span class="rating"><p class="rate rate1"></p></span></td>
                     </tr>
                   </tbody>
                 </table>
