--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <p class="text">
                   はじめまして。平成3年生まれの27歳エンジニアです。社会人歴（IT業界）6年目です。<br>
                   新卒では小さい品質管理専門の企業に入社し様々な受託案件を先輩エンジニアと共に経験しました。
-                  ただ、自分で勉強会などに足を運んでいくうちにもっと外から依頼された単発の案件だけでなく自社サービスに専念して開発をしたい！！と思い転職を決意。<br>
+                  ただ、自分で勉強会などに足を運んでいくうちに外から依頼された単発の案件だけでなく、自社サービスに専念して開発をしたい！！と思い転職を決意。<br>
                   現在は主にモバイルアプリのフロントエンドを担当しています。
               </p>
             </div>
@@ -71,7 +71,7 @@
             <div class="card">
               <div class="skill-desc">
                 <h3 class="skill-desc-title"><i class="fas fa-desktop"></i>言語</h3>
-                <p>広く浅く学んできました。</p>
+                <p>広く浅く学んできました。年数はアバウトです。</p>
                 <table class="table table-borderless">
                   <thead>
                     <tr>
@@ -83,17 +83,17 @@
                   <tbody>
                     <tr>
                       <th scope="row">Java</th>
-                      <td>1年6ヶ月</td>
+                      <td>1年3ヶ月</td>
                       <td><span class="rating"><p class="rate rate4"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">Objective-c</th>
-                      <td>1年6ヶ月</td>
+                      <td>1年3ヶ月</td>
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">Swift</th>
-                      <td>6ヶ月</td>
+                      <td>3ヶ月</td>
                       <td><span class="rating"><p class="rate rate1"></p></span></td>
                     </tr>
                     <tr>
@@ -103,12 +103,12 @@
                     </tr>
                     <tr>
                       <th scope="row">Dart</th>
-                      <td>1年</td>
+                      <td>9ヶ月</td>
                       <td><span class="rating"><p class="rate rate4"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">Typescript</th>
-                      <td>8ヶ月</td>
+                      <td>11ヶ月</td>
                       <td><span class="rating"><p class="rate rate4"></p></span></td>
                     </tr>
                     <tr>
@@ -141,12 +141,12 @@
                   <tbody>
                     <tr>
                       <th scope="row">React</th>
-                      <td>8ヶ月</td>
+                      <td>11ヶ月</td>
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">Flutter</th>
-                      <td>1年</td>
+                      <td>9ヶ月</td>
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
                     </tr>
                     <tr>
@@ -184,7 +184,7 @@
                     </tr>
                     <tr>
                       <th scope="row">Cloud Functions <br/>for Firebase</th>
-                      <td>1年</td>
+                      <td>9ヶ月</td>
                       <td><span class="rating"><p class="rate rate4"></p></span></td>
                     </tr>
                     <tr>
@@ -212,12 +212,12 @@
                   <tbody>
                     <tr>
                       <th scope="row">Firestore</th>
-                      <td>1年</td>
+                      <td>9ヶ月</td>
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">SQLite</th>
-                      <td>1年</td>
+                      <td>10ヶ月</td>
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
                     </tr>
                   </tbody>
@@ -240,22 +240,22 @@
                   <tbody>
                     <tr>
                       <th scope="row">Azure</th>
-                      <td>1年</td>
+                      <td>1年3ヶ月</td>
                       <td><span class="rating"><p class="rate rate1"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">AWS</th>
-                      <td>6ヶ月</td>
+                      <td>2ヶ月</td>
                       <td><span class="rating"><p class="rate rate1"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">GCP</th>
-                      <td>1年</td>
+                      <td>9ヶ月</td>
                       <td><span class="rating"><p class="rate rate2"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">Firebase</th>
-                      <td>1年</td>
+                      <td>9ヶ月</td>
                       <td><span class="rating"><p class="rate rate4"></p></span></td>
                     </tr>
                   </tbody>
@@ -278,17 +278,17 @@
                   <tbody>
                     <tr>
                       <th scope="row">Prism</th>
-                      <td>1年</td>
+                      <td>6ヶ月</td>
                       <td><span class="rating"><p class="rate rate4"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">redux</th>
-                      <td>1年</td>
+                      <td>10ヶ月</td>
                       <td><span class="rating"><p class="rate rate4"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">Atomic design</th>
-                      <td>1年</td>
+                      <td>6ヶ月</td>
                       <td><span class="rating"><p class="rate rate4"></p></span></td>
                     </tr>
                   </tbody>
@@ -311,12 +311,12 @@
                   <tbody>
                     <tr>
                       <th scope="row">Deploygate</th>
-                      <td>1年6ヶ月</td>
+                      <td>2年</td>
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
                     </tr>
                     <tr>
                       <th scope="row">VSTS</th>
-                      <td>1年</td>
+                      <td>10ヶ月</td>
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
                     </tr>
                     <tr>
