--- a/index.html
+++ b/index.html
@@ -315,6 +315,16 @@
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
                     </tr>
                     <tr>
+                      <th scope="row">Redmine</th>
+                      <td>1ヶ月</td>
+                      <td><span class="rating"><p class="rate rate3"></p></span></td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Track</th>
+                      <td>2年</td>
+                      <td><span class="rating"><p class="rate rate3"></p></span></td>
+                    </tr>
+                    <tr>
                       <th scope="row">VSTS</th>
                       <td>10ヶ月</td>
                       <td><span class="rating"><p class="rate rate3"></p></span></td>
