--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="two-column-desc">
               <p class="text">
                   はじめまして。平成3年生まれの27歳エンジニアです。社会人歴（IT業界）6年目です。<br>
-                  新卒では小さい品質管理専門の企業に入社し様々な受託案件を先輩エンジニアと共に経験しました。
+                  新卒では小さい品質管理専門の企業に入社し様々な受託開発案件を先輩エンジニアと共に経験しました。
                   ただ、自分で勉強会などに足を運んでいくうちに外から依頼された単発の案件だけでなく、自社サービスに専念して開発をしたい！！と思い転職を決意。<br>
                   現在は主にモバイルアプリのフロントエンドを担当しています。
               </p>
